force-app/main/default/objects/Lead_Assignment__c/Lead_Assignment__c.object-meta.xml
<CustomObject>
    <label>Lead Assignment</label>
    <nameField>
        <label>Lead Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>