force-app/main/default/objects/Lead_Assignment__c/fields/Actual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Percentage__c</fullName>
    <formula>IF(Round_Robin__r.Total_Leads__c &gt; 0, Number_of_Leads__c /Round_Robin__r.Total_Leads__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>