force-app/main/default/objects/Lead_Assignment__c/fields/Assign_Percent__c.field-meta.xml
<CustomField>
    <fullName>Assign_Percent__c</fullName>
    <label>Assign Percent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>