force-app/main/default/objects/Lead_Assignment__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin</label>
    <referenceTo>Round_Robin__c</referenceTo>
    <relationshipLabel>Lead Assignment</relationshipLabel>
    <relationshipName>Lead_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>