force-app/main/default/objects/Lead_Assignment__c/validationRules/Number_Lead_Should_not_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Lead_Should_not_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Number_of_Leads__c )</errorConditionFormula>
    <errorDisplayField>Number_of_Leads__c</errorDisplayField>
    <errorMessage>Number of Leads Should not be Blank</errorMessage>
</ValidationRule>