force-app/main/default/objects/Lead_Assignment__c/validationRules/User_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>User_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User cannot be blank</errorMessage>
</ValidationRule>