force-app/main/default/objects/Lead_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assign_Percent__c</columns>
    <columns>Actual_Percentage__c</columns>
    <columns>Number_of_Leads__c</columns>
    <columns>Round_Robin__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>